fixed width issue pushing extra whitespace to the right. was caused by placing iframe inside bootstrap row

--- a/public/assets/sass/main.sass
+++ b/public/assets/sass/main.sass
@@ -25,7 +25,6 @@
 
   .galleria
     height: 500px 
-    width: 100%
 
 .text-vertical-center
   h1
